tests/neg/i18274.scala
object Foo extends AnyVal // error
