tests/neg/i18274.check
-- Error: tests/neg/i18274.scala:1:7 -----------------------------------------------------------------------------------
1 |object Foo extends AnyVal // error
  |       ^
  |       A module cannot extends AnyVal
